@@ -1,3 +1,9 @@
+Sun Apr 28 17:14:06 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/area.c (areaImage): Rename to..
+	(Area_Resize): ...this.
+	(Area_EnsureExtraSize): Follow areaImage rename.
+
 Sun Apr 28 16:21:56 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	src:
